--- a/src/assets/config/config-2023-01-07.json
+++ b/src/assets/config/config-2023-01-07.json
@@ -66,7 +66,7 @@
     },
     {
       "name": "main-others",
-      "default": false,
+      "default": true,
       "list": [
         { "tag": "cosplaylife" },
         { "tag": "cosplayway" },
@@ -78,7 +78,7 @@
     },
     {
       "name": "others",
-      "default": false,
+      "default": true,
       "list": [
         { "tag": "otaku" },
         { "tag": "kawaii" },
